objects/TW1_Condicoes_Especiais__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Bonus_Mult_Brinde__c</fullName>
        <label>Bônus Mult. Brinde</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Bonus_Mult_Cupom__c</fullName>
        <label>Bônus Mult. Cupom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Cartao__c</fullName>
        <label>Cartão</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                    <label>Cartão Débito</label>
                </value>
                <value>
                    <fullName>Aplicativo</fullName>
                </value>
                <value>
                    <fullName>Aplicativo(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Visa Platinum</fullName>
                </value>
                <value>
                    <fullName>Visa Infinite</fullName>
                </value>
                <value>
                    <fullName>Visa Vale</fullName>
                </value>
                <value>
                    <fullName>Clube Rio Design</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Forma_de_Pagamento__c</fullName>
        <label>Forma de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                    <label>Cartão Débito</label>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Visa Vale</fullName>
                </value>
                <value>
                    <fullName>Visa Platinum</fullName>
                </value>
                <value>
                    <fullName>Visa Infinite</fullName>
                </value>
                <value>
                    <fullName>Aplicativo</fullName>
                </value>
                <value>
                    <fullName>Aplicativo(FDS)</fullName>
                </value>
                <value>
                    <fullName>Clube Rio Design</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Prioridade_da_condicao__c</fullName>
        <label>Prioridade da condição</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Promocao__c</fullName>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Condições Especiais</relationshipLabel>
        <relationshipName>Condi_es_Especiais</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>

    <label>Condições Especiais</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Cartao__c</columns>
        <columns>TW1_Forma_de_Pagamento__c</columns>
        <columns>TW1_Prioridade_da_condicao__c</columns>
        <columns>TW1_Bonus_Mult_Brinde__c</columns>
        <columns>TW1_Bonus_Mult_Cupom__c</columns>
        <columns>TW1_Promocao__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Condições Especiais</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condições Especiais</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TW1_VR_CEspeciais_Valida_Prioridade_Cond</fullName>
        <active>false</active>
        <errorConditionFormula>(ISNEW() || ISCHANGED(TW1_Prioridade_da_condicao__c)) &amp;&amp; IF (TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 0,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;1&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 1,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;2&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 2,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;3&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 3,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;4&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 4,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;5&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 5,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;6&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 6,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;7&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 7,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;8&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 8,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;9&quot;, IF(TW1_Promocao__r.TW1_Qtde_de_condicoes__c = 9,  TEXT(TW1_Prioridade_da_condicao__c) &lt;&gt; &quot;10&quot;,false))))))))))</errorConditionFormula>
        <errorMessage>O valor do campo Prioridade da condição deve seguir a sequência do registro anterior de Condições Especiais.</errorMessage>
    </validationRules>
</CustomObject>